--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,7 +14,6 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
     "react-slick": "^0.30.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.1"
   }
 }
