--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": " react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -45,5 +45,6 @@
   "devDependencies": {
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "proxy": "https://www.swiggy.com"
 }
